# container

./: .gitignore  build.py  pyproject.toml
base_debian/: Dockerfile
postgres/: Dockerfile  Makefile  docker-compose.yaml  docker-entrypoint.sh
redis/: Dockerfile  Makefile  README.md  docker-bake.hcl  docker-compose.yaml  docker-entrypoint.sh
redis/dockerfile/: Dockerfile.builder  Dockerfile.cluster  Dockerfile.replica  Dockerfile.sentinel  Dockerfile.standalone
redis/entrypoint/: docker-entrypoint-cluster.sh  docker-entrypoint-replica.sh  docker-entrypoint-sentinel.sh  docker-entrypoint-standalone.sh  redis-setup.sh
redis/example/: docker-compose-cluster.yaml  docker-compose-sentinel.yaml  docker-compose-standalone.yaml
